mailing links work

--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,12 @@
 		<meta name="msapplication-square310x310logo" content="/assets/favicon/mstile-310x310.png" />
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,400,900" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" media="screen">
-		<link media="screen" href="main.css" rel="stylesheet"/>
+		<link media="screen" href="/main.css" rel="stylesheet"/>
+		<link media="screen" href="/stroll.css" rel="stylesheet"/>
 	</head>
 	<body>
 		<div id="container"></div>
-		<script src="main.js" charset="utf-8"></script>
+		<script src="/js/stroll.min.js" charset="utf-8"></script>
+		<script src="/main.js" charset="utf-8"></script>
 	</body>
 </html>
